# fast-ai-course

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
deep-learning-for-nlp/: 03_word_embeddings_tutorial.ipynb  README.md
execute/: 01_intro.ipynb  04_mnist_basics.ipynb  04b_mnist_basics.ipynb  05_pet_breeds.ipynb  06_multicat.ipynb  08_collab.ipynb  08b_collab.ipynb  09_tabular.ipynb  09b_tabular.ipynb
